--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,42 @@
 <h1 id="meeting-top-title"><%= @user.name + @user.name2 %>さんの管理ページ</h1>
-
+<link rel="stylesheet" href="/assets/stylesheets/css/font-awesome.min.css">
 
 <div id="user-top">
   <div id="one">
-    <%= link_to "面談ページへ", user_meetings_new_user_path(user_id: @user.id, child_id: @child.id), class: "btn btn-success top-button" %>
+    <%= link_to user_meetings_new_user_path(user_id: @user.id, child_id: @child.id), class: "btn btn-success top-button" do %>
+      <i class="far fa-calendar-check"></i>
+      面談ページへ
+    <% end %>
   </div>
   <div id="two">
-    <%= link_to "提出ページへ", "#", class: "btn btn-success top-button" %>
+    <%= link_to  user_documets_path(@user), class: "btn btn-success top-button" do %>
+      <i class="fas fa-file-alt"></i>
+      提出ページへ
+    <% end %>
   </div>
   <div id="three">
-    <%= link_to "保護者情報編集", "#", class: "btn btn-success top-button" %>
+    <%= link_to  "#", class: "btn btn-success top-button" do %>
+      <i class="fas fa-user"></i>
+      保護者情報編集
+    <% end %>
   </div>
   <div id="four">
-    <%= link_to "生徒さん登録/編集", "#", class: "btn btn-success top-button" %>
+    <%= link_to  "#", class: "btn btn-success top-button" do %>
+      <i class="fas fa-user-graduate"></i>
+      生徒さん登録/編集
+    <% end %>
   </div>
   <div id="five">
-    <%= link_to "先生へ連絡する", "#", class: "btn btn-success top-button" %>
+    <%= link_to  "#", class: "btn btn-success top-button" do %>
+      <i class="fas fa-paper-plane"></i>
+      先生へ連絡する
+    <% end %>
   </div>
   <div id="six">
-    <%= link_to "先生からのお便り", "#", class: "btn btn-success top-button" %>
+    <%= link_to "#", class: "btn btn-success top-button" do  %>
+      <i class="fas fa-envelope-open-text"></i>
+      先生からのお便り
+    <% end %>
   </div>
 
 </div>
