--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -29,11 +29,11 @@
     <% end %>
   </div>
   <div id="two">
-    <%= link_to  teacher_meeting_index2_path(@teacher), class: "btn btn-default top-button" do %>
+    <%= link_to teacher_meeting_index2_path(@teacher), class: "btn btn-default top-button" do %>
       <%= image_tag('/icon/sk.png',size:"20x20") %>
       面談返信状況確認
     <% end %>
-    <%= link_to  documents_path(params:{teacher_id: @teacher}), class: "btn btn-danger top-button" do %>
+    <%= link_to documents_path(params:{teacher_id: @teacher}), class: "btn btn-danger top-button" do %>
        <%= image_tag('/icon/dk.png',size:"20x20") %>
        提出状況確認
     <% end %>
@@ -43,23 +43,23 @@
        <%= image_tag('/icon/input0.png',size:"20x20") %>
        入力式提出
     <% end %>
-    <%= link_to  new_document_path(params:{teacher_id: @teacher}), class: "btn btn-primary top-button" do %>
+    <%= link_to new_document_path(params:{teacher_id: @teacher}), class: "btn btn-primary top-button" do %>
       <%= image_tag('/explain/form.png',size:"20x20") %>
       選択式提出
     <% end %>
   </div>
   <div id="four">
-    <%= link_to  new3_document_path(params:{teacher_id: @teacher}), class: "btn btn-default top-button" do %>
+    <%= link_to new3_document_path(params:{teacher_id: @teacher}), class: "btn btn-default top-button" do %>
       <%= image_tag('/explain/pdf.png',size:"20x20") %>
       表示書類
     <% end %>
-    <%= link_to  "#", class: "btn btn-success top-button" do %>
+    <%= link_to "#", class: "btn btn-success top-button" do %>
       <%= image_tag('/icon/mail.png',size:"20x20") %>
       個別連絡
     <% end %>
   </div>
   <div id="five">
-    <%= link_to  "#", class: "btn btn-info top-button last" do %>
+    <%= link_to teacher_teacher_index2_path(@teacher), class: "btn btn-info top-button last" do %>
     <%= image_tag('/icon/pe.png',size:"20x20") %>
     保護者一覧
     <% end %>
