生徒編集・更新, 保護者編集・更新

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,3 +12,13 @@
     }
   }
 }
+
+/* 生徒登録/編集ページ */
+
+#child-signup {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-family: 'M PLUS Rounded 1c';
+}
