--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,10 @@
     <%= link_to "提出ページへ", "#", class: "btn btn-success top-button" %>
   </div>
   <div id="three">
-    <%= link_to "保護者情報編集", "#", class: "btn btn-success top-button" %>
+    <%= link_to "保護者情報編集", edit_user_path(@user), class: "btn btn-success top-button" %>
   </div>
   <div id="four">
-    <%= link_to "生徒さん登録/編集", "#", class: "btn btn-success top-button" %>
+    <%= link_to "生徒さん登録/編集", user_users_index2_path(@user), class: "btn btn-success top-button" %>
   </div>
   <div id="five">
     <%= link_to "先生へ連絡する", "#", class: "btn btn-success top-button" %>
