pull前コミット

--- a/app/assets/stylesheets/document_selects.scss
+++ b/app/assets/stylesheets/document_selects.scss
@@ -87,4 +87,8 @@
         margin: -3% 0 0 10%;
     }
 }
+#document_download_title{
+    font-size: 16px;
+    margin-bottom: 2%;
+}
 /* 保護者提出ページここまで*/
