--- a/app/views/users/document_view.html.erb
+++ b/app/views/users/document_view.html.erb
@@ -3,7 +3,7 @@
     書類タイトル:<span style="color:red"><%= @document.title %></span>
   </h1>
 </div>
-
+<%= link_to "戻る",user_documets_path(@user),class:"btn btn-default" ,class:"btn btn-default",style:"width:20%" %>
 <% if @input_count > 0 && @select_count ==false %>
   <%= render 'layouts/documents/select'%>
 <% elsif @input_count >0 && @select_count %>
@@ -12,4 +12,3 @@
    <%= render 'layouts/documents/pdf' %>  
 <% end %>
 <hr>
-<%= link_to "戻る",user_documets_path(@user),class:"btn btn-default" ,class:"btn btn-default" %>
