--- a/app/assets/stylesheets/document_items.scss
+++ b/app/assets/stylesheets/document_items.scss
@@ -12,12 +12,12 @@
 /*   user     */
 #document_user_table{
     th{
-        background: rgb(214,185,92);
-        background: -moz-linear-gradient(top,  rgba(214,185,92,1) 0%, rgba(180,183,14,1) 1%, rgba(254,182,69,1) 28%, rgba(237,225,118,1) 66%);
-        background: -webkit-linear-gradient(top,  rgba(214,185,92,1) 0%,rgba(180,183,14,1) 1%,rgba(254,182,69,1) 28%,rgba(237,225,118,1) 66%);
-        background: linear-gradient(to bottom,  rgba(214,185,92,1) 0%,rgba(180,183,14,1) 1%,rgba(254,182,69,1) 28%,rgba(237,225,118,1) 66%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6b95c', endColorstr='#ede176',GradientType=0 );
+        background: #febf01; 
+        background: -moz-linear-gradient(top,  #febf01 0%, #febf01 100%); 
+        background: -webkit-linear-gradient(top,  #febf01 0%,#febf01 100%); 
+        background: linear-gradient(to bottom,  #febf01 0%,#febf01 100%);
         border: 1px solid black;
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febf01', endColorstr='#febf01',GradientType=0 );
     }
     td{border: 1px solid black;font-weight: bold;}
 }
@@ -44,6 +44,13 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8fc400', endColorstr='#8fc400',GradientType=0 );
     color: #fff;
     font-weight: bold;
-    
-
+}
+.use_icon{
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    font-style: normal;
+    font-size: 18px;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
