保護者提出完了詳細ページまで

--- a/app/assets/stylesheets/document_selects.scss
+++ b/app/assets/stylesheets/document_selects.scss
@@ -91,4 +91,13 @@
     font-size: 16px;
     margin-bottom: 2%;
 }
+/*保護者提出済みページタイトル*/
+.document_user_submit_title{
+   border-radius: 6px;
+   background-color:#c0c0c0;
+   color: #fff;
+   font-size: 20px;
+   padding: 16px;
+}
+
 /* 保護者提出ページここまで*/
