--- a/app/views/layouts/documents/_input.html.erb
+++ b/app/views/layouts/documents/_input.html.erb
@@ -11,11 +11,12 @@
 <% end %>  
 <div id="pdf-modal" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true"></div>
 <% count_item = 0 %>
-<%= form_with(url:"#",local:true) do |f| %>
+<%= form_with(url:inputform_path(@document),local:true) do |f| %>
   <% @document.document_items.each do |item| %>
     <%= f.label item.content,class:"title_font",style:"margin-top:1%"%>
     <% if current_teacher.nil?%>
-       <textarea name="tx<%= count_item %>" class="form-control use_icon" rows="5" placeholder=" &#xf15c; 入力してください" ></textarea>
+       <textarea name="tx<%= count_item %>" class="form-control use_icon" rows="5" placeholder=" &#xf15c; 入力してください"
+        ><%= @document.answers.last.reply.split(":")[count_item] if @document.answers.count > 0 %></textarea>
     <% else %>
       <textarea name="tx<%= count_item %>" class="form-control use_icon" rows="5" placeholder=" &#xf15c; 入力してください" readonly=true></textarea>
     <% end %>
