--- a/app/views/teachers/index2.html.erb
+++ b/app/views/teachers/index2.html.erb
@@ -13,6 +13,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+      <% unless user.id == 1 %>  <!--教員管理用のユーザー取り除きました。-->
         <td>
           <div data-toggle="collapse" href="#<%= user.id %>" style="cursor: pointer;"><%= user.name + user.name2 %></div>
             <div id="<%= user.id %>" class="panel-collapse collapse">
@@ -24,6 +25,7 @@
         <td><%= user.email %></td>
         <td><%= user.phone %></td>
         <td><%= link_to "削除", user_path(id: user.id, teacher_id: @teacher.id), data: {confirm: "本当に削除しますか？"}, method: :delete, style: "color: red;" %></td>
+      <% end %>  
       </tr>
     <% end %>
   </tbody>
