--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @child, url: user_users_update2_path(user_id: params[:user_id], child_id: params[:child_id]), local: true) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/child_error_messages' %>
 
       <%= f.label :name_1, "姓", class: "label-signup" %>
       <%= f.text_field :name_1, class: "form-control" %>
