--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -44,11 +44,11 @@
       <tbody>
         <% dates.each do |date| %>
           <tr>
-            <td rowspan="2"><%= date.to_s(:date) %></td>
+            <td rowspan="2"><%= date %></td>
             <% @meeting_times.each do |meeting_time| %>
-                <% if meeting_time.time.to_date == date %>
-                  <td><%= meeting_time.time.to_s(:time) %></td>
-                <% end %>
+              <% if meeting_time.time.to_date == date %>
+                <td><%= meeting_time.time.to_s(:time) %></td>
+              <% end %>
             <% end %>
           </tr>
           <tr>
