連絡機能 教員から保護者, 保護者側一覧

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -53,7 +53,7 @@
       <%= image_tag('/explain/pdf.png',size:"20x20") %>
       表示書類
     <% end %>
-    <%= link_to "#", class: "btn btn-success top-button" do %>
+    <%= link_to teacher_t_message_path(@teacher), class: "btn btn-success top-button" do %>
       <%= image_tag('/icon/mail.png',size:"20x20") %>
       個別連絡
     <% end %>
