--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
     <%= link_to "先生へ連絡する", "#", class: "btn btn-success top-button" %>
   </div>
   <div id="six">
-    <%= link_to "先生からのお便り", "#", class: "btn btn-success top-button" %>
+    <%= link_to "先生からのお便り", user_users_messages_path(@user), class: "btn btn-success top-button" %>
   </div>
 
 </div>
