--- a/app/views/meetings/_desired.html.erb
+++ b/app/views/meetings/_desired.html.erb
@@ -10,7 +10,7 @@
       <%= form_with(url: user_desired_update_path(user_id: @user.id, child_id: @child.id), method: :patch, local:true) do |f| %>
 
         <%= f.label "面談希望日を選択してください" %>
-        <%= f.select :status, options_from_collection_for_select(@teacher.meetings.where(child_id: @child.id), :id, :date), {}, id: "status", class: "form-control form-desired" %>
+        <%= f.select :status, options_from_collection_for_select(@teacher.meetings.where(child_id: @child.id), :date, :date), {}, id: "status", class: "form-control form-desired" %>
         <%= f.label "都合が悪い時間", style: "padding-top: 10px;" %><br>
         <%= f.select :nottime, options_for_select(@date_first), { include_hidden: false }, { multiple: true, class: "js-searchable form-control", id: "nottime" } %>
 
