保護者教員への連絡ページと処理,教員トップの保護者からの連絡表示

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -2,19 +2,10 @@
 
 <div class="box_title">保護者からのお問い合わせ</div>
 <div class="box_srcollbar">
-    10/06　■■■■■■が再入荷しました。<br>
-    10/05　○○○を追加しました。<br>
-    10/04　■■■ を追加しました。<br>
-    10/03　○○■■■○が再入荷しました。<br>
-    10/02　○■■■■■■○○が再入荷しました。<br>
-    10/01　○○○が再入荷しました。<br>
-    09/28　○○■■○■■■が再入荷しました。<br>
-    09/25　○○○■■■を追加しました。<br>
-    09/23　○○○■■■■■を追加しました。<br>
-    09/22　○○○■■■を追加しました。<br>
-    09/20　○○■■■■○■■■を追加しました。<br>
-    09/18　○○■■○■■■を追加しました。<br>
-    09/17　○■■○○■■■を追加しました。<br>
+  <% @p_messages.each do |p_message| %>
+    <%= p_message.created_at.to_s(:date) %>
+    <%= link_to p_message.title, "#" %><br>
+  <% end %>
 </div>
 
 <div id="teacher-top">
