--- a/app/views/users/new2.html.erb
+++ b/app/views/users/new2.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(url: child_create2_path(@user), local: true) do |f| %>
+    <%= form_with(model: @child, url: child_create2_path(@user), local: true) do |f| %>
       <%= render 'shared/child_error_messages' %>
 
       <%= f.label :name_1, "姓", class: "label-signup" %>
@@ -10,6 +10,8 @@
 
       <%= f.label :name_2, "名", class: "label-signup" %>
       <%= f.text_field :name_2, class: "form-control" %>
+
+      <%= f.hidden_field :teacher_id, :value => @teacher.id %>
 
       <%= f.submit "登録", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
