--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -59,9 +59,12 @@
     </table>
     <div id="submit-center">
       <%= f.submit "更新", class: "btn btn-success submit-width"%>
-      <%#= form_with(url: push_path, local:true) do |f| %>
-        <%= f.submit "スケジュール決定送信", class: "btn btn-primary submit-width"%>
-      <%# end %>
     </div>
+  <% end %>
+</div>
+
+<div id="submit-center">
+  <%= form_with(url: push_path, local:true) do |f| %>
+    <%= f.submit "スケジュール決定送信", class: "btn btn-primary submit-width"%>
   <% end %>
 </div>
