--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -65,9 +65,9 @@
     </table>
     <div id="submit-center">
       <%= f.submit "更新", class: "btn btn-success submit-width" %>
-      <%#= form_with(url: push_path, local:true) do |f| %>
+      <%= form_with(url: push_path, local:true) do |f| %>
         <%= f.submit "日時確定送信", class: "btn btn-primary submit-width" %>
-      <%# end %>
+      <% end %>
     </div>
   <% end %>
 </div>
